--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,28 @@
+@charset "UTF-8";
+/* CSS dokument */
+
+
+* {
+    /* allows us to include the padding and border in an element's total width and height */
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0px;
+}
+
 body {
     font-size: 20px;
     background-color: rgb(63, 67, 187);
+}
+
+main {
+    display: flex;
+}
+
+.responsive-img {
+    width: 100%;
+    height: auto;
+}
+
+.width50 {
+    width: 50%;
 }
