--- a/css/styles.css
+++ b/css/styles.css
@@ -1,28 +1,99 @@
 @charset "UTF-8";
 /* CSS dokument */
 
+:root {
+    --color-bg: #1b273a;
+    --color-bg-nav: #1d4eb4;
+
+    --color-btn-primary: #2d7dfe;
+    --color-btn-seconday: #fff;
+    --color-btn-nav: rgba(255, 255, 255, .1);
+
+    --color-card: #2b364a;
+
+    --color-border-nav-top: #175dcc;
+    --color-border-nav-sides: #4288fa;    
+    --color-border-divider: rgba(181, 204, 245, .1);
+
+    --txt-primary: #fff;
+    --txt-secondary: #2d7dfe;
+
+    --border-radius: 5px
+}
 
 * {
     /* allows us to include the padding and border in an element's total width and height */
     box-sizing: border-box;
     padding: 0;
-    margin: 0px;
+    margin: 0;
+}
+
+/* Defining variables and setting height */
+html, body {
+    height: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
-    font-size: 20px;
-    background-color: rgb(63, 67, 187);
+    font-size: 16px;
+    line-height: 1.5;
+    color: var(--txt-primary);
+    font-family: "Inter-Regular",sans-serif;
+    font-weight: normal;
+    font-style: normal;
+    background-color: var(--color-bg);
 }
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Guardian-Bold", sans-serif;
+    font-weight: normal;
+    font-style: normal;
+    margin: 1em 0;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+    border-style: none;
+    overflow: clip;
+}
+
+div {
+    display: block;
+}
+
+.icon {
+    height: 30px;
+    display: block;
+    margin: auto;
+    filter: invert(100%) sepia(5%) saturate(7487%) hue-rotate(269deg) brightness(110%) contrast(100%);
+}
+
 
 main {
-    display: flex;
-}
-
-.responsive-img {
+    max-width: 1220px;
+    margin: 0 auto;
+    display: block;
     width: 100%;
-    height: auto;
+    padding: 50px 0;
 }
 
-.width50 {
-    width: 50%;
+.field_item {
+    margin-bottom: 45px;
+    padding: 0 20px;
 }
+
+.btn-icon {
+    width: 48px;
+    height: 48px;
+    background-color: var(--color-btn-primary);
+    border-radius: var(--border-radius);
+    border: 0;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+}
+
+
+@media only screen and (min-width: calc(769px)) {}
