--- a/css/filter-nikka.css
+++ b/css/filter-nikka.css
@@ -184,6 +184,7 @@ select {
 .item-list > ul > li {
     width: 50%;
     margin-bottom: 50px;
+    display: list-item;
 }
 
 .item-list>ul>li>.content-wrapper {
@@ -248,6 +249,10 @@ select {
     position: absolute;
     right: 9px;
     top: 9px;
+}
+
+.hidden {
+    display: none;
 }
 
 
