--- a/css/slider-heidi.css
+++ b/css/slider-heidi.css
@@ -2,7 +2,7 @@
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 700px;
+  max-width: 1500px;
   position: relative;
   margin: auto;
 }
@@ -27,11 +27,12 @@
  text-align:center;
  position: absolute;
  bottom: 25px;
- margin-left: 300px;
+ margin-left: 50%;
+ transform: translate(-50%, 0);
 }
 
 .active, .dot:hover {
-  background-color: #0e0e0e;
+  background-color: var(--txt-primary);
 }
 
 /* Fading animation */
