--- a/css/slider-heidi.css
+++ b/css/slider-heidi.css
@@ -31,7 +31,7 @@
  transform: translate(-50%, 0);
 }
 
-.active, .dot:hover {
+.dot.active, .dot:hover {
   background-color: var(--txt-primary);
 }
 
